SEO fix: Replace Try Other Tools with comprehensive All PictriKit Tools gallery - Updated 10 tool pages with full canonical URLs (https://www.pictrikit.com/page.html) - Added all 9 tool links to each gallery for better internal linking - Improved crawl efficiency by using direct destination URLs - Added spec documentation for SEO schema URL fix

--- a/align-screenshots-centered.html
+++ b/align-screenshots-centered.html
@@ -232,38 +232,50 @@
             </div>
         </div>
 
-    <!-- Try Other Tools Section -->
-    <section class="other-tools" style="margin-top:3rem;padding:2rem 0;background:#f9fafb;border-radius:12px;">
-      <div class="container" style="max-width:800px;margin:0 auto;padding:0 1rem;">
-        <h3 style="text-align:center;margin-bottom:1.5rem;color:#1f2937;font-size:1.25rem;">Try Other Tools</h3>
-        <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:1rem;">
-          <a href="/compare-screenshots.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Compare Screenshots</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Side-by-side comparison</p>
-            </div>
+    <!-- All PictriKit Tools Gallery -->
+    <section class="tools-gallery" style="margin-top:3rem;padding:2rem;background:white;border-radius:12px;border:1px solid #e5e7eb;">
+      <div class="container" style="max-width:1000px;margin:0 auto;padding:0 1rem;">
+        <h2 style="text-align:center;margin-bottom:2rem;color:#1f2937;font-size:1.5rem;">🛠️ All PictriKit Tools</h2>
+        <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1.25rem;">
+          <a href="https://www.pictrikit.com/compare-screenshots.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">📊 Compare Screenshots</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Compare two screenshots side by side with customizable layouts for design reviews.</p>
           </a>
-          <a href="/before-after-screenshot.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Before &amp; After</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Show changes clearly</p>
-            </div>
+          <a href="https://www.pictrikit.com/combine-chat-screenshots.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">💬 Combine Chat Screenshots</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Merge multiple chat screenshots into one seamless conversation flow.</p>
           </a>
-          <a href="/put-two-screenshots-together.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Put Two Together</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Simple side-by-side</p>
-            </div>
+          <a href="https://www.pictrikit.com/put-two-screenshots-together.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">🔗 Put Two Screenshots Together</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Combine any two screenshots side by side or vertically for tutorials.</p>
           </a>
-          <a href="/stack-screenshots-vertically.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Stack Vertically</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Create long sequences</p>
-            </div>
+          <a href="https://www.pictrikit.com/stack-screenshots-vertically.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">📚 Stack Screenshots Vertically</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Stack multiple screenshots in a vertical layout for step-by-step guides.</p>
+          </a>
+          <a href="https://www.pictrikit.com/arrange-screenshots-for-presentation.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">🎯 Arrange for Presentation</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Create professional presentation layouts with multiple screenshots.</p>
+          </a>
+          <a href="https://www.pictrikit.com/before-after-screenshot.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">⚡ Before After Screenshot</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Create compelling before/after comparisons with customizable labels.</p>
+          </a>
+          <a href="https://www.pictrikit.com/clean-screenshot-layout.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">✨ Clean Screenshot Layout</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Organize screenshots in clean, professional layouts with consistent spacing.</p>
+          </a>
+          <a href="https://www.pictrikit.com/screenshot-grid-layout.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">📋 Screenshot Grid Layout</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Arrange screenshots in customizable grid patterns for showcasing features.</p>
+          </a>
+          <a href="https://www.pictrikit.com/compare-ui-screenshots.html" style="text-decoration:none;display:block;background:#f8fafc;border:2px solid #e5e7eb;border-radius:10px;padding:1.25rem;transition:all 0.2s;">
+            <h3 style="margin:0 0 0.5rem;font-size:1rem;color:#007AFF;">🔍 Compare UI Screenshots</h3>
+            <p style="margin:0;font-size:0.875rem;color:#6b7280;line-height:1.5;">Compare user interface screenshots with tools for design reviews.</p>
           </a>
         </div>
-        <div style="text-align:center;margin-top:1.5rem;">
-          <a href="/" style="color:#007AFF;text-decoration:none;font-size:0.9rem;">Back to All Tools</a>
+        <div style="text-align:center;margin-top:2rem;">
+          <a href="https://www.pictrikit.com/app.html" style="display:inline-block;background:#007AFF;color:white;padding:0.875rem 2rem;border-radius:8px;text-decoration:none;font-weight:600;font-size:1rem;">🚀 Try Main PictriKit App</a>
         </div>
       </div>
     </section>
