--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -315,39 +315,73 @@
             </div>
         </div>
 
-    <!-- Try Other Tools Section -->
-    <section class="other-tools" style="margin-top:3rem;padding:2rem 0;background:#f9fafb;border-radius:12px;">
-      <div class="container" style="max-width:800px;margin:0 auto;padding:0 1rem;">
-        <h3 style="text-align:center;margin-bottom:1.5rem;color:#1f2937;font-size:1.25rem;">Try Other Tools</h3>
-        <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:1rem;">
-          <a href="/compare-screenshots.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Compare Screenshots</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Side-by-side comparison</p>
-            </div>
-          </a>
-          <a href="/before-after-screenshot.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Before &amp; After</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Show changes clearly</p>
-            </div>
-          </a>
-          <a href="/put-two-screenshots-together.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Put Two Together</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Simple side-by-side</p>
-            </div>
-          </a>
-          <a href="/stack-screenshots-vertically.html" style="text-decoration:none;">
-            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
-              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Stack Vertically</h4>
-              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Create long sequences</p>
-            </div>
-          </a>
-        </div>
-        <div style="text-align:center;margin-top:1.5rem;">
-          <a href="/" style="color:#007AFF;text-decoration:none;font-size:0.9rem;">Back to All Tools</a>
-        </div>
+    <!-- Tools Gallery - Cross-linking for SEO -->
+    <section class="tools-gallery" style="margin-top:3rem;padding:2rem;background:#f9fafb;border-radius:12px;">
+      <h3 style="text-align:center;margin-bottom:1.5rem;color:#1f2937;font-size:1.25rem;">All Screenshot Tools</h3>
+      <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(180px,1fr));gap:1rem;max-width:900px;margin:0 auto;">
+        <a href="/compare-screenshots.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Compare Screenshots</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Side-by-side comparison</p>
+          </div>
+        </a>
+        <a href="/combine-chat-screenshots.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Combine Chat Screenshots</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Stack conversations</p>
+          </div>
+        </a>
+        <a href="/put-two-screenshots-together.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Put Two Together</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Simple side-by-side</p>
+          </div>
+        </a>
+        <a href="/stack-screenshots-vertically.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Stack Vertically</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Long sequences</p>
+          </div>
+        </a>
+        <a href="/arrange-screenshots-for-presentation.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Arrange for Presentation</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Professional layouts</p>
+          </div>
+        </a>
+        <a href="/before-after-screenshot.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Before &amp; After</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Show changes</p>
+          </div>
+        </a>
+        <a href="/clean-screenshot-layout.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Clean Layout</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Minimal design</p>
+          </div>
+        </a>
+        <a href="/align-screenshots-centered.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Align Centered</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Perfect alignment</p>
+          </div>
+        </a>
+        <a href="/screenshot-grid-layout.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Grid Layout</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">Multiple images</p>
+          </div>
+        </a>
+        <a href="/compare-ui-screenshots.html" style="text-decoration:none;">
+          <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+            <h4 style="margin:0 0 0.25rem;font-size:0.875rem;color:#1f2937;">Compare UI</h4>
+            <p style="margin:0;font-size:0.75rem;color:#6b7280;">UI comparison</p>
+          </div>
+        </a>
+      </div>
+      <div style="text-align:center;margin-top:1.5rem;">
+        <a href="/" style="color:#007AFF;text-decoration:none;font-size:0.875rem;">← Back to Home</a>
       </div>
     </section>
     <footer>
