fix: add cleanUrls and update canonical/sitemap to clean URLs

--- a/align-screenshots-centered.html
+++ b/align-screenshots-centered.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Align Screenshots Centered |Automatic Centering Tool</title>
     <meta name="description" content="Align screenshots centered automatically. No manual positioning needed. Every image stays perfectly centered in its space.">
-    <link rel="canonical" href="https://www.pictrikit.com/align-screenshots-centered.html">
+    <link rel="canonical" href="https://www.pictrikit.com/align-screenshots-centered">
     
     <meta property="og:title" content="Align Screenshots Centered">
     <meta property="og:description" content="Align screenshots centered automatically. Every image stays perfectly centered.">
-    <meta property="og:url" content="https://www.pictrikit.com/align-screenshots-centered.html">
+    <meta property="og:url" content="https://www.pictrikit.com/align-screenshots-centered">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
