--- a/app.html
+++ b/app.html
@@ -14,13 +14,13 @@
   <title>PictriKit - Screenshot Layout Tool</title>
   <meta name="description" content="PictriKit - Free online screenshot layout tool. Create beautiful image compositions with multiple layouts including linear, focus, grid, compare and device frames.">
   <meta name="keywords" content="screenshot, layout, image editor, photo collage, pictrikit, screen capture, image composition">
-  <link rel="canonical" href="https://www.pictrikit.com/app.html">
+  <link rel="canonical" href="https://www.pictrikit.com/app">
   
   <!-- Open Graph -->
   <meta property="og:title" content="PictriKit - Screenshot Layout Tool">
   <meta property="og:description" content="Free online screenshot layout tool. Create beautiful image compositions.">
   <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
-  <meta property="og:url" content="https://www.pictrikit.com/app.html">
+  <meta property="og:url" content="https://www.pictrikit.com/app">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="PictriKit">
   
