--- a/changelog.html
+++ b/changelog.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Changelog - PictriKit Updates and New Features</title>
     <meta name="description" content="See what's new in PictriKit. Track the latest updates, improvements, and new features added to our screenshot layout tool.">
-    <link rel="canonical" href="https://www.pictrikit.com/changelog.html">
+    <link rel="canonical" href="https://www.pictrikit.com/changelog">
     <!-- Open Graph -->
     <meta property="og:title" content="Changelog - PictriKit Updates">
     <meta property="og:description" content="Track the latest updates and new features in PictriKit.">
-    <meta property="og:url" content="https://www.pictrikit.com/changelog.html">
+    <meta property="og:url" content="https://www.pictrikit.com/changelog">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
