--- a/combine-chat-screenshots.html
+++ b/combine-chat-screenshots.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Combine Chat Screenshots into One Image |Stack Conversations</title>
     <meta name="description" content="Combine multiple chat screenshots into one long image. Stack WhatsApp, iMessage, or WeChat conversations vertically for easy sharing and archiving.">
-    <link rel="canonical" href="https://www.pictrikit.com/combine-chat-screenshots.html">
+    <link rel="canonical" href="https://www.pictrikit.com/combine-chat-screenshots">
     
     <meta property="og:title" content="Combine Chat Screenshots into One Image">
     <meta property="og:description" content="Stack multiple chat screenshots vertically into one clean image for sharing or archiving.">
-    <meta property="og:url" content="https://www.pictrikit.com/combine-chat-screenshots.html">
+    <meta property="og:url" content="https://www.pictrikit.com/combine-chat-screenshots">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
