--- a/screenshot-grid-layout.html
+++ b/screenshot-grid-layout.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Grid Layout for Multiple Screenshots |Organize Images in Rows</title>
     <meta name="description" content="Arrange multiple screenshots in a grid layout. Create 2x2, 2x3, or custom grids for organized image displays without manual alignment.">
-    <link rel="canonical" href="https://www.pictrikit.com/screenshot-grid-layout.html">
+    <link rel="canonical" href="https://www.pictrikit.com/screenshot-grid-layout">
     
     <meta property="og:title" content="Grid Layout for Multiple Screenshots">
     <meta property="og:description" content="Arrange multiple screenshots in organized grid layouts. No manual alignment needed.">
-    <meta property="og:url" content="https://www.pictrikit.com/screenshot-grid-layout.html">
+    <meta property="og:url" content="https://www.pictrikit.com/screenshot-grid-layout">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
