--- a/templates.html
+++ b/templates.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Templates - Screenshot Layout Examples | PictriKit</title>
     <meta name="description" content="Browse screenshot layout templates and examples. Find inspiration for app showcases, before-after comparisons, grid layouts, and more.">
-    <link rel="canonical" href="https://www.pictrikit.com/templates.html">
+    <link rel="canonical" href="https://www.pictrikit.com/templates">
     <!-- Open Graph -->
     <meta property="og:title" content="Templates - Screenshot Layout Examples">
     <meta property="og:description" content="Browse screenshot layout templates and examples for your projects.">
-    <meta property="og:url" content="https://www.pictrikit.com/templates.html">
+    <meta property="og:url" content="https://www.pictrikit.com/templates">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
