--- a/feedback.html
+++ b/feedback.html
@@ -13,10 +13,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Feedback & Official Responses - PictriKit</title>
   <meta name="description" content="Read user feedback, feature requests, and official responses from the PictriKit team. Share your suggestions and see how we respond to community input.">
-  <link rel="canonical" href="https://www.pictrikit.com/feedback.html">
+  <link rel="canonical" href="https://www.pictrikit.com/feedback">
   <meta property="og:title" content="User Feedback & Official Responses - PictriKit">
   <meta property="og:description" content="Community feedback and official responses from PictriKit. Share your thoughts and see our replies.">
-  <meta property="og:url" content="https://www.pictrikit.com/feedback.html">
+  <meta property="og:url" content="https://www.pictrikit.com/feedback">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
   <meta property="og:site_name" content="PictriKit">
